<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/checkUpgradeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/check_upgrade"
        android:padding="15dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/scriptBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/upgrade_script"
        android:padding="15dp"/>
    <Button
        android:id="@+id/cleanCacheBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/clean_cache"
        android:padding="15dp"/>
    <Button
        android:id="@+id/browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/browser"
        android:padding="15dp"/>
    <Button
        android:id="@+id/apkBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/download_apk"
        android:padding="15dp"/>
    <Button
        android:id="@+id/phonedataBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/download_phone_data"
        android:padding="15dp"/>

</LinearLayout>
