<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:layout_weight="7"
            android:inputType="textUri"
            android:focusable="false"
            android:hint="@string/home_page" />
        <Button
            android:id="@+id/getUrlBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/primary"
            android:text="@string/get_url"/>
        <Button
            android:id="@+id/visitUrlBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/info"
            android:text="@string/visit_url"/>
        <Button
            android:id="@+id/collapse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/success"
            android:text="@string/collapse"/>
    </LinearLayout>

    <com.tencent.smtt.sdk.WebView
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="1dp"
        android:layout_weight="1" />

</LinearLayout>